--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "predeploy": "npm run build"
   },
   "dependencies": {
-    "@telegram-apps/react-router-integration": "^1.0.0",
+    "@telegram-apps/react-router-integration": "^1.0.1",
     "@telegram-apps/sdk-react": "^1.0.0",
     "@telegram-apps/telegram-ui": "^2.1.5",
     "@tonconnect/ui-react": "^2.0.5",
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
+    "@types/estree": "^1.0.6",
     "@types/node": "^20.12.11",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
