--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
-  "homepage": "https://telegram-mini-apps.github.io/reactjs-template",
+  "homepage": "https://casebookkiller.github.io/reactjs-template",
   "scripts": {
     "deploy": "gh-pages -d dist",
     "dev": "vite",
@@ -14,33 +14,38 @@
     "predeploy": "npm run build"
   },
   "dependencies": {
-    "@telegram-apps/react-router-integration": "^1.0.1",
-    "@telegram-apps/sdk-react": "^1.0.0",
-    "@telegram-apps/telegram-ui": "^2.1.5",
-    "@tonconnect/ui-react": "^2.0.5",
-    "eruda": "^3.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.0"
+    "@telegram-apps/sdk": "^2.4.0",
+    "@telegram-apps/sdk-react": "^2.0.9",
+    "@telegram-apps/telegram-ui": "^2.1.8",
+    "@tonconnect/ui-react": "^2.0.9",
+    "antd-mobile": "^5.38.1",
+    "eruda": "^3.4.0",
+    "primereact": "^10.8.4",
+    "react": "^18.3.1",
+    "react-bootstrap-icons": "^1.11.4",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.2.0",
+    "@eslint/js": "^9.11.1",
     "@types/estree": "^1.0.6",
-    "@types/node": "^20.12.11",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@typescript-eslint/parser": "^7.8.0",
+    "@types/node": "^22.7.4",
+    "@types/react": "^18.3.10",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
-    "@vitejs/plugin-react-swc": "^3.6.0",
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "antd": "^5.21.2",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.1",
+    "eslint": "^9.11.1",
+    "eslint-plugin-react": "^7.37.1",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.12",
     "gh-pages": "^6.1.1",
-    "globals": "^15.2.0",
-    "typescript": "^5.4.5",
-    "typescript-eslint": "^7.8.0",
-    "vite": "^5.2.11",
-    "vite-tsconfig-paths": "^4.3.2"
+    "globals": "^15.10.0",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.7.0",
+    "vite": "^5.4.8",
+    "vite-tsconfig-paths": "^5.0.1"
   }
 }
