--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,7 +5,7 @@
     "module": "ESNext",
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
-    "typeRoots": ["node_modules/@types",]
+    "typeRoots": ["node_modules/@types",],
   },
   "include": [
     "vite.config.ts"
