--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "reactjs-template",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
   "homepage": "https://casebookkiller.github.io/reactjs-template",
   "scripts": {
@@ -14,12 +14,14 @@
     "predeploy": "npm run build"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.47.10",
     "@telegram-apps/sdk": "^2.4.0",
     "@telegram-apps/sdk-react": "^2.0.9",
     "@telegram-apps/telegram-ui": "^2.1.8",
     "@tonconnect/ui-react": "^2.0.9",
     "antd-mobile": "^5.38.1",
     "eruda": "^3.4.0",
+    "generate-react-cli": "^8.4.9",
     "primereact": "^10.8.4",
     "react": "^18.3.1",
     "react-bootstrap-icons": "^1.11.4",
@@ -43,6 +45,7 @@
     "eslint-plugin-react-refresh": "^0.4.12",
     "gh-pages": "^6.1.1",
     "globals": "^15.10.0",
+    "supabase": "^2.1.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
     "vite": "^5.4.8",
